Implement authentication, JWT management, sign-in, sign-up, and password reset with verification logic